[package]
name = "solutils"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
description = "Utilities for writing Solana programs using the Anchor framework."
repository = "https://github.com/lucasig11/solutils"
keywords = ["solana", "anchor", "blockchain", "utility"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anchor-lang = "0.24.0"
anchor-spl = "0.24.0"
mpl-token-metadata = { version = "1.2.3", features = ["no-entrypoint"] }
chargeable-derive = { version = "0.1.0", path = "./derive/chargeable" }
